# SDL_final_project

src/: CMakeLists.txt  coin.cpp  coin.h  dinosaur.cpp  dinosaur.h  global.h  main.cpp  obstacle.cpp  obstacle.h  rock.cpp  rock.h  window.cpp  window.h
src/cmake/: FindSDL2.cmake
